--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -5,6 +5,7 @@ imports:
     - { resource: 'services/event_listener.yaml' }
     - { resource: 'services/state_machine.yaml' }
     - { resource: 'services/form.yaml' }
+    - { resource: 'services/menu.yaml' }
     - { resource: 'services/provider.yaml' }
 
     - { resource: 'services/stripe_checkout_session/api_platform.yaml' }
