--- a/src/Resources/config/services/form.yaml
+++ b/src/Resources/config/services/form.yaml
@@ -1,11 +1,11 @@
 parameters:
-    sylius_mollie_plugin.form.type.payment_methods.validation_groups.transport:
+    sylius_stripe_payment_plugin.form.type.payment_methods.validation_groups.transport:
         - sylius
-    sylius_mollie_plugin.form.type.payment_methods.payment_surcharge_fee.validation_groups:
+    sylius_stripe_payment_plugin.form.type.payment_methods.payment_surcharge_fee.validation_groups:
         - sylius
-    sylius_mollie_plugin.form.type.partial_shipment.validation_groups:
+    sylius_stripe_payment_plugin.form.type.partial_shipment.validation_groups:
         - sylius
-    sylius_mollie_plugin.form.type.mollie.validation_groups:
+    sylius_stripe_payment_plugin.form.type.validation_groups:
         - sylius
 
 services:
