subscription impl wip with files this time...

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,5 +1,6 @@
 imports:
     - { resource: 'services/command_handlers.yaml' }
+    - { resource: 'services/guard.yaml' }
     - { resource: 'services/factory.yaml' }
     - { resource: 'services/payum.yaml' }
     - { resource: 'services/stripe.yaml' }
