--- a/src/Resources/config/services/payum.yaml
+++ b/src/Resources/config/services/payum.yaml
@@ -1,19 +1,20 @@
 services:
-
-  sylius_payum_stripe.extension.update_payment_state:
-    public: true
-    class: VK\SyliusStripePaymentPlugin\Extension\UpdatePaymentStateExtension
-    arguments:
-      $factory: '@sm.factory'
-      # Alias of "@payum.storage.sylius_component_core_model_payment"
-      # or "@payum.storage.app_entity_payment_payment" or any other available
-      # Payum storage handling Payment entity
-      $storage: '@payum.storage.sylius_payment'
-      $getStatusRequestFactory: '@sylius.factory.payum_get_status_action'
-    tags:
-      - name: payum.extension
-        factory: stripe_checkout_session
-        alias: sylius_payum_stripe.extension.update_payment_state
-      - name: payum.extension
-        factory: stripe_js
-        alias: sylius_payum_stripe.extension.update_payment_state
+    VK\SyliusStripePaymentPlugin\Abstraction\StateMachine\WinzouStateMachine:
+        arguments:
+            $factory: '@sm.factory'
+    VK\SyliusStripePaymentPlugin\Extension\UpdatePaymentStateExtension:
+        public: true
+        arguments:
+            $stateMachine: '@VK\SyliusStripePaymentPlugin\Abstraction\StateMachine\WinzouStateMachine'
+            # Alias of "@payum.storage.sylius_component_core_model_payment"
+            # or "@payum.storage.app_entity_payment_payment" or any other available
+            # Payum storage handling Payment entity
+            $storage: '@payum.storage.sylius_payment'
+            $getStatusRequestFactory: '@sylius.factory.payum_get_status_action'
+        tags:
+            -   name: payum.extension
+                factory: stripe_checkout_session
+                alias: sylius_payum_stripe.extension.update_payment_state
+            -   name: payum.extension
+                factory: stripe_js
+                alias: sylius_payum_stripe.extension.update_payment_state
