--- a/src/Resources/config/services/stripe_js/gateway_configuration_types.yaml
+++ b/src/Resources/config/services/stripe_js/gateway_configuration_types.yaml
@@ -1,9 +1,7 @@
 services:
-
-  sylius_payum_stripe.form.type.gateway_configuration.stripe_js:
-    class: VK\SyliusStripePaymentPlugin\Form\Type\StripeGatewayConfigurationType
-    tags:
-      - name: sylius.gateway_configuration_type
-        type: stripe_js
-        label: sylius_stripe_payment_plugin.payum_gateway_factory.stripe_js
-      - name: form.type
+    VK\SyliusStripePaymentPlugin\Form\Type\StripeGatewayConfigurationType:
+        tags:
+            -   name: sylius.gateway_configuration_type
+                type: stripe_js
+                label: sylius_stripe_payment_plugin.payum_gateway_factory.stripe_js
+            -   name: form.type
