--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -8,6 +8,7 @@ imports:
     - { resource: 'services/event_subscriber.yaml' }
     - { resource: 'services/state_machine.yaml' }
     - { resource: 'services/form.yaml' }
+    - { resource: 'services/controller.yaml' }
     - { resource: 'services/menu.yaml' }
     - { resource: 'services/provider.yaml' }
 
